--- a/object_with_getstate.ipynb
+++ b/object_with_getstate.ipynb
@@ -61,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:35.925205Z",
-     "start_time": "2024-05-09T21:39:35.917172Z"
+     "end_time": "2024-05-09T21:50:02.155612Z",
+     "start_time": "2024-05-09T21:50:02.146207Z"
     }
    },
    "cell_type": "code",
@@ -103,8 +103,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.045090Z",
-     "start_time": "2024-05-09T21:39:36.041877Z"
+     "end_time": "2024-05-09T21:50:02.495120Z",
+     "start_time": "2024-05-09T21:50:02.491099Z"
     }
    },
    "cell_type": "code",
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.053536Z",
-     "start_time": "2024-05-09T21:39:36.049499Z"
+     "end_time": "2024-05-09T21:50:02.529311Z",
+     "start_time": "2024-05-09T21:50:02.523883Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.058298Z",
-     "start_time": "2024-05-09T21:39:36.054922Z"
+     "end_time": "2024-05-09T21:50:02.608977Z",
+     "start_time": "2024-05-09T21:50:02.603936Z"
     }
    },
    "cell_type": "code",
@@ -176,8 +176,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.070596Z",
-     "start_time": "2024-05-09T21:39:36.064049Z"
+     "end_time": "2024-05-09T21:50:02.632650Z",
+     "start_time": "2024-05-09T21:50:02.627015Z"
     }
    },
    "cell_type": "code",
@@ -245,8 +245,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.101912Z",
-     "start_time": "2024-05-09T21:39:36.096487Z"
+     "end_time": "2024-05-09T21:50:02.678494Z",
+     "start_time": "2024-05-09T21:50:02.673127Z"
     }
    },
    "cell_type": "code",
@@ -291,8 +291,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.110507Z",
-     "start_time": "2024-05-09T21:39:36.107694Z"
+     "end_time": "2024-05-09T21:50:02.704633Z",
+     "start_time": "2024-05-09T21:50:02.700352Z"
     }
    },
    "cell_type": "code",
@@ -325,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.126215Z",
-     "start_time": "2024-05-09T21:39:36.123876Z"
+     "end_time": "2024-05-09T21:50:02.740879Z",
+     "start_time": "2024-05-09T21:50:02.737546Z"
     }
    },
    "cell_type": "code",
@@ -381,8 +381,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.187858Z",
-     "start_time": "2024-05-09T21:39:36.183675Z"
+     "end_time": "2024-05-09T21:50:02.754246Z",
+     "start_time": "2024-05-09T21:50:02.750703Z"
     }
    },
    "cell_type": "code",
@@ -429,8 +429,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.203155Z",
-     "start_time": "2024-05-09T21:39:36.199744Z"
+     "end_time": "2024-05-09T21:50:02.765186Z",
+     "start_time": "2024-05-09T21:50:02.760732Z"
     }
    },
    "cell_type": "code",
@@ -471,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.237129Z",
-     "start_time": "2024-05-09T21:39:36.232797Z"
+     "end_time": "2024-05-09T21:50:02.824748Z",
+     "start_time": "2024-05-09T21:50:02.821272Z"
     }
    },
    "cell_type": "code",
@@ -543,8 +543,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.287656Z",
-     "start_time": "2024-05-09T21:39:36.281523Z"
+     "end_time": "2024-05-09T21:50:02.838860Z",
+     "start_time": "2024-05-09T21:50:02.834014Z"
     }
    },
    "cell_type": "code",
@@ -586,8 +586,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.298370Z",
-     "start_time": "2024-05-09T21:39:36.293914Z"
+     "end_time": "2024-05-09T21:50:02.854334Z",
+     "start_time": "2024-05-09T21:50:02.850298Z"
     }
    },
    "cell_type": "code",
@@ -669,8 +669,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.310987Z",
-     "start_time": "2024-05-09T21:39:36.307990Z"
+     "end_time": "2024-05-09T21:50:02.912747Z",
+     "start_time": "2024-05-09T21:50:02.909594Z"
     }
    },
    "cell_type": "code",
@@ -695,8 +695,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.354477Z",
-     "start_time": "2024-05-09T21:39:36.350851Z"
+     "end_time": "2024-05-09T21:50:02.924018Z",
+     "start_time": "2024-05-09T21:50:02.921385Z"
     }
    },
    "cell_type": "code",
@@ -721,8 +721,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.374263Z",
-     "start_time": "2024-05-09T21:39:36.370673Z"
+     "end_time": "2024-05-09T21:50:02.943999Z",
+     "start_time": "2024-05-09T21:50:02.939762Z"
     }
    },
    "cell_type": "code",
@@ -737,8 +737,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.405984Z",
-     "start_time": "2024-05-09T21:39:36.399931Z"
+     "end_time": "2024-05-09T21:50:03.001718Z",
+     "start_time": "2024-05-09T21:50:02.996368Z"
     }
    },
    "cell_type": "code",
@@ -770,8 +770,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.420124Z",
-     "start_time": "2024-05-09T21:39:36.415988Z"
+     "end_time": "2024-05-09T21:50:03.025553Z",
+     "start_time": "2024-05-09T21:50:03.021715Z"
     }
    },
    "cell_type": "code",
@@ -792,8 +792,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.430946Z",
-     "start_time": "2024-05-09T21:39:36.427186Z"
+     "end_time": "2024-05-09T21:50:03.062391Z",
+     "start_time": "2024-05-09T21:50:03.058412Z"
     }
    },
    "cell_type": "code",
@@ -826,8 +826,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.481062Z",
-     "start_time": "2024-05-09T21:39:36.476362Z"
+     "end_time": "2024-05-09T21:50:03.080337Z",
+     "start_time": "2024-05-09T21:50:03.076142Z"
     }
    },
    "cell_type": "code",
@@ -837,7 +837,7 @@
     {
      "data": {
       "text/plain": [
-       "(__main__.AExplicitObject, __main__.GetstateMixin, object)"
+       "(__main__.AExplicitObject, __main__.Serializable, object)"
       ]
      },
      "execution_count": 20,
@@ -850,8 +850,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.492050Z",
-     "start_time": "2024-05-09T21:39:36.488284Z"
+     "end_time": "2024-05-09T21:50:03.096085Z",
+     "start_time": "2024-05-09T21:50:03.091747Z"
     }
    },
    "cell_type": "code",
@@ -925,8 +925,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.502463Z",
-     "start_time": "2024-05-09T21:39:36.497776Z"
+     "end_time": "2024-05-09T21:50:03.157936Z",
+     "start_time": "2024-05-09T21:50:03.153188Z"
     }
    },
    "cell_type": "code",
@@ -950,8 +950,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.551253Z",
-     "start_time": "2024-05-09T21:39:36.547149Z"
+     "end_time": "2024-05-09T21:50:03.173901Z",
+     "start_time": "2024-05-09T21:50:03.170768Z"
     }
    },
    "cell_type": "code",
@@ -969,7 +969,7 @@
      "output_type": "stream",
      "text": [
       "AWithMeta().__getstate__()={}\n",
-      "AWithMeta.__mro__=(<class '__main__.AWithMeta'>, <class '__main__.GetstateMixin'>, <class 'object'>)\n"
+      "AWithMeta.__mro__=(<class '__main__.AWithMeta'>, <class '__main__.Serializable'>, <class 'object'>)\n"
      ]
     }
    ],
@@ -987,8 +987,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.569255Z",
-     "start_time": "2024-05-09T21:39:36.565079Z"
+     "end_time": "2024-05-09T21:50:03.196328Z",
+     "start_time": "2024-05-09T21:50:03.192395Z"
     }
    },
    "cell_type": "code",
@@ -1022,8 +1022,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.577794Z",
-     "start_time": "2024-05-09T21:39:36.575183Z"
+     "end_time": "2024-05-09T21:50:03.239745Z",
+     "start_time": "2024-05-09T21:50:03.235177Z"
     }
    },
    "cell_type": "code",
@@ -1042,8 +1042,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.645933Z",
-     "start_time": "2024-05-09T21:39:36.641717Z"
+     "end_time": "2024-05-09T21:50:03.258515Z",
+     "start_time": "2024-05-09T21:50:03.254447Z"
     }
    },
    "cell_type": "code",
@@ -1077,8 +1077,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.663466Z",
-     "start_time": "2024-05-09T21:39:36.660715Z"
+     "end_time": "2024-05-09T21:50:03.275191Z",
+     "start_time": "2024-05-09T21:50:03.271632Z"
     }
    },
    "cell_type": "code",
@@ -1117,8 +1117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.674786Z",
-     "start_time": "2024-05-09T21:39:36.669815Z"
+     "end_time": "2024-05-09T21:50:03.313237Z",
+     "start_time": "2024-05-09T21:50:03.309443Z"
     }
    },
    "cell_type": "code",
@@ -1161,8 +1161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.731761Z",
-     "start_time": "2024-05-09T21:39:36.727819Z"
+     "end_time": "2024-05-09T21:50:03.336213Z",
+     "start_time": "2024-05-09T21:50:03.332746Z"
     }
    },
    "cell_type": "code",
@@ -1184,8 +1184,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.747322Z",
-     "start_time": "2024-05-09T21:39:36.741600Z"
+     "end_time": "2024-05-09T21:50:03.370598Z",
+     "start_time": "2024-05-09T21:50:03.366110Z"
     }
    },
    "cell_type": "code",
@@ -1209,7 +1209,7 @@
      "output_type": "stream",
      "text": [
       "AExplicitMeta().__getstate__()={}\n",
-      "AExplicitMeta.__mro__=(<class '__main__.AExplicitMeta'>, <class '__main__.GetstateMixin'>, <class 'object'>)\n",
+      "AExplicitMeta.__mro__=(<class '__main__.AExplicitMeta'>, <class '__main__.Serializable'>, <class 'object'>)\n",
       "--------------------------------------\n",
       "AImplicitMeta().__getstate__()=None\n",
       "AImplicitMeta.__mro__=(<class '__main__.AImplicitMeta'>, <class 'object'>)\n"
@@ -1296,8 +1296,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-09T21:39:36.767227Z",
-     "start_time": "2024-05-09T21:39:36.764092Z"
+     "end_time": "2024-05-09T21:50:03.393314Z",
+     "start_time": "2024-05-09T21:50:03.390784Z"
     }
    },
    "cell_type": "code",
